# der-koerper-bot

./: .env.example  .eslintrc.cjs  .gitignore  README.md  book-data.json  book.txt  config.cfg  index.html  package-lock.json  package.json  pyproject.toml  rollup.config.js  run.ts  sentences.csv  sentences.json  story.txt  tsconfig.json
der_koerper_bot/: __main__.py  config.py
der_koerper_bot/notebooks/: transform_data.ipynb
der_koerper_bot/social_media_bot/: __main__.py
der_koerper_bot/story/: __init__.py  trash.py
der_koerper_bot/trash_files/: noun_trash.txt  sentence_trash.txt  verb_trash.txt
lib/: index.ts
lib/assets/: frequencies.json  sentences.csv
lib/random/: index.ts
lib/story/: benchmark.ts  index.ts  sentence.ts  utils.ts  weighted-random.ts
lib/trash/: index.ts  trash-map.ts  trash.ts
public/: index.html  main.js.map  main.mjs.map
scripts/: generate-book-text.mts  post-to-mastodon.mts
scripts/book/: generate-book-text-with-words.mts  generate-book-text.mts  generate-repeated-words.mts
scripts/book/output/: book-data.json  book-with-words-data.json  book-with-words.txt  book.txt
scripts/book/output/repeated-words/: repeated-word-erfährt.json  repeated-word-erfährt.txt  repeated-word-gehört.json  repeated-word-gehört.txt  repeated-word-ist.json  repeated-word-ist.txt  repeated-word-spielt.json  repeated-word-spielt.txt
src/: index.ts  main.ts
src/assets/: sentences.csv
src/lib/: csv-utils.ts  story.ts  trash.ts
